Added multiple test variants